fix layout overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 html {
     background-color: #1A1A1C;
 }
+
+.matrix-scroll {
+    width: 100%;
+    overflow-x: scroll;
+}
